refactor(doublets): Make Doublets a component with a dictionary