@@ -10,6 +10,20 @@ import org.junit.jupiter.api.Test;
 
 public class DoubletsTest {
 
+    record Doublets(List<String> dictionary) {
+        public List<String> doublet(String head, String tail) {
+            if (head.equals(tail)) {
+                return Collections.singletonList(head);
+            }
+
+            if (compare(head, tail) == 1) {
+                return List.of(head, tail);
+            }
+
+            throw new UnsupportedOperationException();
+        }
+    }
+
     @Test
     void theSameWordDoubletReturnsTheOriginalWord() {
         assertThat(doublet("test", "test"), is(List.of("test")));
@@ -21,15 +35,7 @@ public class DoubletsTest {
     }
 
     private static List<String> doublet(String head, String tail) {
-        if (head.equals(tail)) {
-            return Collections.singletonList(head);
-        }
-
-        if (compare(head, tail) == 1) {
-            return List.of(head, tail);
-        }
-
-        throw new UnsupportedOperationException();
+        return new Doublets(List.of("head", "tail", "test")).doublet(head, tail);
     }
 
     private static long compare(String head, String tail) {
